WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223077
REGRESSION(
r274270
): Broke WebKitSecurityOrigin docs
https://bugs.webkit.org/show_bug.cgi?id=223077
Summary
REGRESSION(r274270): Broke WebKitSecurityOrigin docs
Michael Catanzaro
Reported
2021-03-11 10:30:41 PST
See
https://bugs.webkit.org/show_bug.cgi?id=222943#c16
Attachments
Patch
(1.39 KB, patch)
2021-03-11 10:31 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-03-11 10:31:28 PST
Created
attachment 422943
[details]
Patch
EWS Watchlist
Comment 2
2021-03-11 10:32:24 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3
2021-03-11 11:25:12 PST
Committed
r274290
: <
https://commits.webkit.org/r274290
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422943
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug