REGRESSION(r274270): Broke WebKitSecurityOrigin docs https://bugs.webkit.org/show_bug.cgi?id=223077

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-03-11
Reviewed by Darin Adler.

* UIProcess/API/glib/WebKitSecurityOrigin.cpp:

Canonical link: https://commits.webkit.org/235185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274290 268f45cc-cd09-0410-ab3c-d52691b4dbfc